added new paths
